# repo2kg

./: .gitignore  LICENSE  README.md  pyproject.toml  repo2kg.py
tests/: test_config.py  test_incremental.py  test_parsing.py  test_toon.py
tests/fixtures/: sample.js  sample.py
