[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo2kg"
version = "0.5.14"
description = "Build a code Knowledge Graph from any repository (Python/JS/TS/Java/Go/Rust/C/C++/Ruby/C#) for token-efficient AI agent context. Supports JSON and TOON output formats. Agent-friendly: generates CLAUDE.md, CODEBASE.md, and supports zero-dep queries."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "repo2kg contributors" }]
keywords = ["knowledge-graph", "code-analysis", "llm", "ai-agent", "token-optimization", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.2",
    "tree-sitter>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-java>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-rust>=0.21",
    "tree-sitter-c>=0.21",
    "tree-sitter-cpp>=0.21",
    "tree-sitter-ruby>=0.21",
    "tree-sitter-c-sharp>=0.21",
]

[project.scripts]
repo2kg = "repo2kg:main"

[project.urls]
Homepage = "https://github.com/mugenGH/repo2kg"
Issues = "https://github.com/mugenGH/repo2kg/issues"
